# outlook-cli-2.0

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SKILL.md  convert_msg_to_md.py  install.ps1  install.sh  outlook.py  outlook_to_markdown.py  pyproject.toml  requirements.txt
.claude/skills/: calendar.md  extract-emails.md  search-emails.md  send-email.md
docs/: COMPARISON.md  EXAMPLES.md
outlook_cli/: __init__.py  cli.py
outlook_cli/services/: export.py  search.py  viewer.py
outlook_emails/: cli.py
outlook_emails/core/: models.py
outlook_emails/services/: calendar.py  export.py
