[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "outlook-cli-2"
version = "2.0.0"
description = "Python CLI for Microsoft Outlook automation using COM - search emails, send messages, manage calendar, export to Obsidian"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "ob-cheng", email = "your-email@example.com"}
]
keywords = [
    "outlook",
    "cli",
    "email",
    "calendar",
    "automation",
    "com-automation",
    "pywin32",
    "windows",
    "obsidian",
    "markdown-export",
    "outlook-automation",
    "email-cli",
    "calendar-cli"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Office/Business",
    "Topic :: Utilities"
]

dependencies = [
    "pywin32>=300",
    "python-dateutil>=2.8.2"
]

[project.urls]
Homepage = "https://github.com/ob-cheng/outlook-cli-2.0"
Repository = "https://github.com/ob-cheng/outlook-cli-2.0"
Issues = "https://github.com/ob-cheng/outlook-cli-2.0/issues"

[project.scripts]
outlook-cli = "outlook:main"
